--- a/package.json
+++ b/package.json
@@ -1,35 +1,14 @@
 {
-  "_args": [
-    [
-      "eslint-config-jordanmonier@2.0.2",
-      "C:\\Users\\Jordan\\Desktop\\Travail\\EXYPE\\Repositories\\react-backoffice"
-    ]
-  ],
-  "_development": true,
-  "_from": "eslint-config-jordanmonier@2.0.2",
-  "_id": "eslint-config-jordanmonier@2.0.2",
-  "_inBundle": false,
-  "_integrity": "sha512-gIY9QeedpwGhGmyuNEtmk5WZzpRwFKUf8qNexW7d1gkNuf1X42yvBF/vNIWChEE5wTHKpBmRdE8/3fkpw67kXw==",
-  "_location": "/eslint-config-jordanmonier",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "version",
-    "registry": true,
-    "raw": "eslint-config-jordanmonier@2.0.2",
-    "name": "eslint-config-jordanmonier",
-    "escapedName": "eslint-config-jordanmonier",
-    "rawSpec": "2.0.2",
-    "saveSpec": null,
-    "fetchSpec": "2.0.2"
-  },
-  "_requiredBy": [
-    "#DEV:/"
-  ],
-  "_resolved": "https://registry.npmjs.org/eslint-config-jordanmonier/-/eslint-config-jordanmonier-2.0.2.tgz",
-  "_spec": "2.0.2",
-  "_where": "C:\\Users\\Jordan\\Desktop\\Travail\\EXYPE\\Repositories\\react-backoffice",
+  "name": "eslint-config-jordanmonier",
+  "description": "My ESLint configuration",
   "author": {
     "name": "Jordan Monier"
+  },
+  "version": "2.0.2",
+  "license": "ISC",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.6.0",
@@ -52,10 +31,6 @@
     "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   },
-  "description": "My ESLint configuration",
-  "license": "ISC",
-  "main": "index.js",
-  "name": "eslint-config-jordanmonier",
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
@@ -76,9 +51,5 @@
     "eslint-plugin-unicorn": "^23.0.0",
     "prettier": "^2.1.2",
     "typescript": "^4.0.5"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "version": "2.0.2"
+  }
 }
